<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:orientation="vertical"
        android:padding="8dip" >

        <LinearLayout
            android:id="@+id/linearLayout_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dip"
                android:paddingRight="4dip" />

            <TextView
                android:id="@+id/textView_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingLeft="4dip"
                android:paddingRight="4dip"
                android:text="0 / 0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dip"
            android:weightSum="2" >

            <Button
                android:id="@+id/buttonStartStop"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dip"
                android:paddingRight="4dip"
                android:text="@string/start"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dip"
                android:paddingRight="4dip"
                android:text="@string/settings"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="vertical"
            android:padding="8dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="4dip" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="4dip"
                    android:paddingRight="4dip"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="4dip"
                        android:paddingRight="4dip"
                        android:text="@string/conversations" />

                    <EditText
                        android:id="@+id/editText_conversation"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/number"
                        android:imeOptions="actionDone"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="4dip"
                    android:paddingRight="4dip"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="4dip"
                        android:paddingRight="4dip"
                        android:text="@string/messages" />

                    <EditText
                        android:id="@+id/editText_conversation_message"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/number"
                        android:imeOptions="actionDone"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dip"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="12dip" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/inbox" />

                    <EditText
                        android:id="@+id/editTextInbox"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/sent" />

                    <EditText
                        android:id="@+id/editTextSent"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/outbox" />

                    <EditText
                        android:id="@+id/editTextOutbox"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/draft" />

                    <EditText
                        android:id="@+id/editTextDraft"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/failed" />

                    <EditText
                        android:id="@+id/editTextFailed"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/notification_ind" />

                    <EditText
                        android:id="@+id/editTextNotificationInd"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dip"
                android:layout_marginTop="12dip"
                android:background="@drawable/footer_background"
                android:orientation="horizontal"
                android:padding="4dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dip"
                    android:src="@drawable/hashcap_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dip"
                    android:text="@string/info"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>